Tst/Tests/Neg/Basic/BadLhs.p
main model machine Entry {
    start state Init {
        entry {
            (1, 3)[0] = 1;
        }
    }
}
